[package]
name = "roguelike"
version = "0.1.0"
authors = ["Aaron Hakala <aaron.hakala@gmail.com>"]
edition = "2018"

[dependencies]
rltk = { version = "0.7.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.0"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"